--- a/app/views/tfa/tfas/show.html.erb
+++ b/app/views/tfa/tfas/show.html.erb
@@ -6,20 +6,6 @@
   @http_params = after[2].split(",").map{|i|i.split(":").length==2 ? i.split(":") : [i.reverse.sub(":","").reverse, ""]}.to_h if after[2]
 end %>
 <% tfa_phone_arr = @tfa.phone.split("")
-tfa_phone = "#{tfa_phone_arr[0..1].join} (#{tfa_phone_arr[2..4].join}) *** **#{tfa_phone_arr[10..11].join}" %>
-<h1>Please enter the code we sent to <%= tfa_phone %></h1>
+@tfa_phone = "#{tfa_phone_arr[0..1].join} (#{tfa_phone_arr[2..4].join}) *** **#{tfa_phone_arr[10..11].join}" %>
 
-<%= form_with(url: @url, method: @method) do |f|  %>
-  <%= f.hidden_field :tfa_id, value: @tfa.id %>
-  <% @http_params.each do |p| %>
-    <%= f.hidden_field p[0].to_sym, value: p[1].to_s.gsub("\0001", ':').gsub("\0002", ',').gsub("\0003", '#') %>
-  <% end %>
-
-  <div class='field'>
-    <%= f.number_field :code %>
-  </div>
-
-  <div class='actions'>
-    <%= f.submit 'Go' %>
-  </div>
-<% end %>
+<%= render partial: 'tfa/tfas/show' %>
